dont force shared libs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,7 @@ PREPEND_PATH_FROM_LIST(${PROJECT_NAME}_CORE_PUBLIC_HEADERS
   ${PROJECT_NAME}_CORE_PUBLIC_HEADERS)
 
 # Create target libpinocchio.so
-ADD_LIBRARY(${PROJECT_NAME} SHARED
+ADD_LIBRARY(${PROJECT_NAME}
   ${${PROJECT_NAME}_CORE_SOURCES}
   ${${PROJECT_NAME}_CORE_PUBLIC_HEADERS}
   ${${PROJECT_NAME}_CORE_GENERATED_PUBLIC_HEADERS})
